Update paper and add latest timestamped PDF

--- a/paper.tex
+++ b/paper.tex
@@ -75,7 +75,7 @@ Platforms such as Instagram, TikTok, and Pinterest develop and deploy large-scal
 Failing to achieve an adequate balance can result in issues such as ad fatigue, where users become less responsive to ads due to overexposure, and user churn, where users discontinue using the platform \cite{sagtani2023quantifying} \cite{silberstein2023combating}.\\
 
 % why solving this is a hard problem 
-Jointly optimizing revenue and long-term engagement is structurally difficult for several fundamental reasons. First, the monetization and engagement objectives can conflict: actions that increase immediate monetization, such as higher ad load, may degrade future engagement and retention, ultimately reducing long-term revenue. Second, immediate per-interaction signals are directly observable and easier to optimize, whereas long-term outcomes unfold over extended horizons and are harder to measure and attribute to specific actions. Third, recommendation decisions alter user state dynamics, creating feedback loops between engagement and future monetization capacity. These properties make the trade-off inherently sequential and policy-dependent.
+Jointly optimizing revenue and long-term engagement is structurally difficult for several fundamental reasons. First, the monetization and engagement objectives can conflict: actions that increase immediate monetization, such as higher ad load, may degrade future engagement and retention, ultimately reducing long-term revenue \cite{sagtani2023quantifying, yan2020ads}. Second, immediate per-interaction signals are directly observable and easier to optimize, whereas long-term outcomes unfold over extended horizons and are harder to measure and attribute to specific actions \cite{hohnhold2015focusing, wang2022surrogate, mcdonald2023spotify}. Third, recommendation decisions alter user state dynamics, creating feedback loops between engagement and future monetization capacity \cite{zou2019reinforcement, ie2019reinforcement}. These properties make the trade-off inherently sequential and policy-dependent.
 
 %Existing solution to this problem
 Despite these structural challenges, industrial platforms have largely addressed this problem using supervised deep learning models. Over the past decade, deep learning has emerged as the dominant paradigm for large-scale recommendation systems. Production systems at major platforms typically rely on deep neural models trained using supervised objectives defined on short-term engagement signals such as clicks, dwell time, or conversions. By learning rich representations of users, items, and context from massive interaction logs, these models estimate conditional expectations of immediate outcomes and use these predictions to guide content selection, ranking, and monetization decisions. This paradigm has delivered substantial gains in personalization accuracy and short-term monetization efficiency, and remains central to modern industrial recommender systems.
