--- a/paper.tex
+++ b/paper.tex
@@ -53,11 +53,14 @@
 
 \begin{document}
 \begin{abstract}
-Balancing advertisements with organic content in large-scale recommendation engines is a well-known challenge in the industry. While ads are essential for revenue generation in platforms that integrate them alongside organic content, they often underperform in user engagement compared to organic content. The key challenges in achieving this balance include ad selection, ranking, and integration with organic content. These involve decisions about whether to insert an ad, which ad to select, and where to place it. Traditional methods optimize for the highest probability of ad clickthrough with fixed placements and are typically solved as supervised Machine Learning (ML) problems. However, these approaches focus on optimizing single actions, overlooking the downstream impact of sequential user behavior and underutilizing valuable contextual signals. A more dynamic approach that accounts for context and optimizes the long-term value of action sequences, balancing both engagement and revenue, remains an open research area.\\
+Balancing advertisements with organic content in large-scale recommendation engines is a well-known challenge in the industry. While ads are essential for revenue generation in platforms that integrate them alongside organic content, they often underperform in user engagement compared to organic content. The key challenges in achieving this balance include ad selection, ranking, and integration with organic content. These involve decisions about whether to insert an ad, which ad to select, and where to place it. 
 
-Reinforcement Learning (RL) offers a promising framework to address the need for dynamic, context-aware optimization by formalizing the process of finding the best policy in sequential decision-making under uncertainty. However, implementing RL in large-scale recommendation systems faces challenges such as vast state and action spaces, the risk of poorly chosen reward functions and unsafe exploration, high computational costs, and the difficulty of interpreting online policy learning. This paper surveys existing methodologies and frameworks that utilize RL to enhance recommendation strategies, aiming to guide practitioners and researchers in navigating these challenges. Our analysis reveals that while fully online RL is powerful in theory, in practice, full RL is rarely deployed. Instead, a hybrid approaches combine the reliability of Supervised Learning (SL) with the long-term optimization capabilities of RL.
+Traditional methods optimize the probability of immediate ad clickthrough with fixed placements and are typically framed as supervised learning problems. However, these approaches estimate conditional expectations of immediate outcomes under a historical logging policy, treating decisions as independent and optimizing short-horizon objectives. A more principled formulation that accounts for contextual information and policy-induced state evolution, and that optimizes long-horizon value over action sequences to jointly balance engagement and revenue, remains an open research challenge. \\
 
-Our analysis suggests that RL-inspired techniques like contextual bandits, offline replay, and surrogate reward modeling often yield a more desirable balance of scalability, safety, and interpretability for large-scale ad-serving than fully online RL.
+Reinforcement Learning (RL) offers a principled framework to address the need for dynamic, context-aware optimization by formalizing the process of finding the best policy in sequential decision-making under uncertainty. However, implementing RL in large-scale recommendation systems faces challenges including high-dimensional state and action spaces, the risk of poorly chosen reward functions and unsafe exploration, high computational costs, and the difficulty of interpreting online policy learning. 
+
+This survey synthesizes RL methodologies and frameworks for jointly optimizing ads and organic content, organizing prior approaches according to how they model state, action, reward, and policy. Our review indicates that while fully online RL is theoretically appealing, documented industrial systems more frequently adopt hybrid formulations that combine the reliability of Supervised Learning (SL) with the long-term optimization capabilities of RL
+or constrained approaches such as contextual bandits and offline replay that balance long-term optimization with practical considerations of scalability and safety.
 \end{abstract}
 
 \keywords{Reinforcement Learning, Ad Policy Optimization, Contextual Bandits, Recommendation Systems, Off-Policy Learning, Online Advertising, Deep Reinforcement Learning, Multi-Objective Optimization}
@@ -73,7 +76,7 @@ Our analysis suggests that RL-inspired techniques like contextual bandits, offli
 Platforms such as Instagram, TikTok, and Pinterest develop and deploy large-scale content recommendation systems whose revenue models depend on jointly optimizing monetization and long-term engagement in interactive environments \cite{zhao2020jointly, danescu2010competing}.
 
 % What happens if problem isn’t solved
-Failing to achieve an adequate balance can result in issues such as ad fatigue, where users become less responsive to ads due to overexposure, and user churn, where users discontinue using the platform \cite{sagtani2023quantifying, silberstein2023combating}.\\
+Failing to achieve an adequate balance can result in issues such as ad fatigue, where users become less responsive to ads due to overexposure, and user churn, where users discontinue using the platform \cite{sagtani2023quantifying, silberstein2023combating}.
 
 % why solving this is a hard problem 
 Jointly optimizing revenue and long-term engagement is structurally difficult for several fundamental reasons. First, the monetization and engagement objectives can conflict: actions that increase immediate monetization, such as higher ad load, may degrade future engagement and retention, ultimately reducing long-term revenue \cite{sagtani2023quantifying, yan2020ads}. Second, immediate per-interaction signals are directly observable and easier to optimize, whereas long-term outcomes unfold over extended horizons and are harder to measure and attribute to specific actions \cite{hohnhold2015focusing, wang2022surrogate, mcdonald2023spotify}. Third, recommendation decisions alter user state dynamics, creating feedback loops between engagement and future monetization capacity \cite{zou2019reinforcement, ie2019reinforcement}. These properties make the trade-off inherently sequential and policy-dependent.
@@ -82,11 +85,12 @@ Jointly optimizing revenue and long-term engagement is structurally difficult fo
 Despite these structural challenges, large-scale platforms have addressed these challenges using supervised deep learning models optimized for short-term engagement signals such as clicks, dwell time, and conversions \cite{covington2016deep, cheng2016wide, yi2014beyond, mcmahan2013ad}. By learning rich representations of users, items, and context from massive interaction logs, these models estimate conditional expectations of immediate outcomes and use these predictions to guide content selection, ranking, and monetization decisions \cite{covington2016deep, cheng2016wide}. This paradigm has delivered substantial gains in personalization accuracy and short-term monetization efficiency, and remains central to modern industrial recommender systems \cite{covington2016deep, cheng2016wide}.
 
 % Structural limitations of Deep Learning to solve this problem 
-While neural networks remain powerful function approximators, optimizing supervised objectives on historical logged data does not directly address the sequential and interactive nature of the system. In such settings, SL is structurally insufficient for two key reasons. First, SL ignores policy-induced distribution shifts. It optimizes conditional expectations of immediate outcomes (e.g., $\mathbb{E}[r_t \mid s_t, a_t]$) using data generated under a historical policy. This implicitly assumes that the training distribution is fixed \cite{swaminathan2015counterfactual,dudik2011doubly}. In interactive systems, however, the recommendation policy shapes user behavior, and user behavior in turn determines future training data. This violates the stationarity assumptions underlying standard supervised optimization \cite{swaminathan2015counterfactual,dudik2011doubly}. Second, SL lacks a principled mechanism for evaluating counterfactual trajectories.  SL relies exclusively on realized trajectories. Because user journeys are highly personalized and path-dependent, most possible interaction sequences are never observed in logged data \cite{swaminathan2015counterfactual,dudik2011doubly, agarwal2016statistical}. Long-term outcomes are therefore not fixed labels, but functions of the policy that generates future trajectories \cite{swaminathan2015counterfactual,dudik2011doubly}.
+While neural networks remain powerful function approximators, optimizing supervised objectives on historical logged data does not directly address the sequential and interactive nature of the system. In such settings, SL is structurally insufficient for two key reasons. First, SL ignores policy-induced distribution shifts. It optimizes conditional expectations of immediate outcomes (e.g., $\mathbb{E}[r_t \mid s_t, a_t]$) using data generated under a historical policy. This implicitly assumes that the training distribution is fixed. In interactive systems, however, the recommendation policy shapes user behavior, and user behavior in turn determines future training data. This violates the stationarity assumptions underlying standard supervised optimization \cite{swaminathan2015counterfactual,dudik2011doubly}. Second, SL lacks a principled mechanism for evaluating counterfactual trajectories.  SL relies exclusively on realized trajectories. Because user journeys are highly personalized and path-dependent, most possible interaction sequences are never observed in logged data. Long-term outcomes are therefore not fixed labels, but functions of the policy that generates future trajectories \cite{agarwal2016statistical}.
 
 	% How does Reinforcement Learning (RL) offer a promising solution to these challenges?
-RL provides a framework in recommendation systems to solve the two problems above \cite{afsar2022reinforcement}. First, RL addresses policy-induced distribution shifts by explicitly modeling recommendation as a sequential decision process in which actions influence future states. Second, RL enables evaluation and improvement of policies over entire trajectories. By estimating long-horizon returns under the dynamics induced by a candidate policy, RL allows the system to reason about delayed effects and optimize objectives that depend on sequential interactions.
-Rather than replacing SL, RL can be viewed as embedding supervised prediction within a sequential control framework. Deep models remain central for representation learning and reward estimation, while RL augments them with the machinery required to optimize policy-dependent, long-term objectives. 
+RL provides a framework in recommendation systems to solve the two problems above \cite{afsar2022reinforcement}. First, RL addresses policy-induced distribution shifts by explicitly modeling recommendation as a sequential decision process in which actions influence future states \cite{Sutton1998,puterman2014markov} . Second, RL enables evaluation and improvement of policies over entire trajectories \cite{Sutton1998,puterman2014markov}. By estimating long-horizon returns under the dynamics induced by a candidate policy, RL allows the system to reason about delayed effects and optimize objectives that depend on sequential interactions \cite{Sutton1998,zou2019reinforcement}.
+Rather than replacing SL, RL can be viewed as embedding supervised prediction within a sequential control framework \cite{Sutton1998,afsar2022reinforcement}. Deep models remain central for representation learning and reward estimation, while RL augments them with the machinery required to optimize policy-dependent, long-term objectives \cite{dulac2019challenges,levine2020offline,chen2022off}.
+
 
 % What specific challenges are encountered when implementing RL in large-scale recommendation systems?
 Despite the promising theoretical framework that RL offers for optimizing long-term value in recommendation systems, implementing RL in real-world, large-scale platforms remains complex \cite{dulac2021challenges}. First, the state space, which reflects the current context of the user and the environment, and the action space, which captures how the recommender system can be tuned, are both essentially infinite \cite{zhu2021overview}. This vastness makes learning and optimization computationally intensive and requires scalable approximation methods, as exact dynamic programming over such state and action spaces is infeasible in practice \cite{afsar2022reinforcement}. Second, designing appropriate reward functions is critical, as poorly chosen reward functions can lead to unintended system behaviors that degrade user experience or negatively affect business revenue \cite{everitt2021reward}. For example, a reward function that overly prioritizes click-based metrics may drive the system to promote clickbait content, boosting short-term engagement but eroding user trust and satisfaction over time \cite{wu2017returning}. Conversely, a reward function too heavily skewed toward revenue metrics could result in excessive ad load, degrading the user experience and accelerating churn. Striking the right balance in reward function design is essential to achieve both user engagement and monetization objectives without compromising the platform’s long-term goals. Furthermore, interpretability is a major challenge in RL deployment. Understanding the learned policies can be particularly difficult when policies are updated in real-time during user interactions (online policy learning) \cite{glanois2024survey} \cite{vouros2022explainable} \cite{dulac2019challenges}. In extreme cases, this lack of transparency could result in non-compliant or unethical behavior, posing significant risks to both users and the business \cite{lambert2023entangled}.
@@ -98,7 +102,7 @@ In light of the challenges outlined above, this paper provides a synthesis of RL
 This survey introduces a taxonomy for monetization-aware recommender systems grounded in the Markov Decision Process (MDP) framework and uses it to systematically organize and analyze more than 150 academic and industrial works.
 
 % How the paper is structured 
-The paper begins with a historical overview of recommendation systems with monetization components, tracing the evolution from rule-based and heuristic approaches to tree-based models and modern deep learning architectures. This progression highlights the limitations of short-horizon optimization and motivates reinforcement learning as a framework for modeling long-horizon, policy-dependent objectives.The survey then introduces the core components of a Markov Decision Process—state, action, reward, and policy as the organizing framework for the remainder of the paper.Rather than structuring prior work chronologically or by algorithmic family, we compare systems according to how they define and operationalize these components. A minimal RL environment (FrozenLake) is used as a conceptual scaffold to introduce the abstraction before mapping it to large-scale monetization-aware recommender systems.
+The paper begins with a historical overview of recommendation systems with monetization components, tracing the evolution from rule-based and heuristic approaches to tree-based models and modern deep learning architectures. This progression highlights the limitations of short-horizon optimization and motivates reinforcement learning as a framework for modeling long-horizon, policy-dependent objectives.The survey then introduces the core components of a Markov Decision Process—state, action, reward, and policy as the organizing framework for the remainder of the paper. Rather than structuring prior work chronologically or by algorithmic family, we compare systems according to how they define and operationalize these components. A minimal RL environment (FrozenLake) is used as a conceptual scaffold to introduce the abstraction before mapping it to large-scale monetization-aware recommender systems.
 
 \section{Paper Collection Methodology}
 \label{sec:methodology}
