Recompile: update paper.tex and add paper_2026-02-28_1620.pdf

--- a/paper.tex
+++ b/paper.tex
@@ -57,10 +57,10 @@ Balancing advertisements with organic content in large-scale recommendation engi
 
 Traditional methods optimize the probability of immediate ad clickthrough with fixed placements and are typically framed as supervised learning problems. However, these approaches estimate conditional expectations of immediate outcomes under a historical logging policy, treating decisions as independent and optimizing short-horizon objectives. A more principled formulation that accounts for contextual information and policy-induced state evolution, and that optimizes long-horizon value over action sequences to jointly balance engagement and revenue, remains an open research challenge. \\
 
-Reinforcement Learning (RL) offers a principled framework to address the need for dynamic, context-aware optimization by formalizing the process of finding the best policy in sequential decision-making under uncertainty. However, implementing RL in large-scale recommendation systems faces challenges including high-dimensional state and action spaces, the risk of poorly chosen reward functions and unsafe exploration, high computational costs, and the difficulty of interpreting online policy learning. 
+Reinforcement Learning (RL) provides a principled framework for modeling recommendation as a sequential decision process under uncertainty. However, implementing RL in large-scale recommendation systems faces challenges including high-dimensional state and action spaces, the risk of poorly chosen reward functions and unsafe exploration, high computational costs, and the difficulty of interpreting online policy learning. 
 
-This survey synthesizes RL methodologies and frameworks for jointly optimizing ads and organic content, organizing prior approaches according to how they model state, action, reward, and policy. Our review indicates that while fully online RL is theoretically appealing, documented industrial systems more frequently adopt hybrid formulations that combine the reliability of Supervised Learning (SL) with the long-term optimization capabilities of RL
-or constrained approaches such as contextual bandits and offline replay that balance long-term optimization with practical considerations of scalability and safety.
+This survey synthesizes RL methodologies and frameworks for jointly optimizing ads and organic content, organizing prior approaches according to how they model state, action, reward, and policy. Our review indicates that while fully online RL is theoretically appealing, documented industrial systems more frequently adopt hybrid architectures that leverage supervised learning for robust short-term estimation while incorporating RL components for long-horizon value optimization.
+Furthermore, many large-scale deployments rely on constrained RL formulations, such as contextual bandits and offline replay, that balance sequential optimization with practical considerations of scalability, safety, and interpretability.
 \end{abstract}
 
 \keywords{Reinforcement Learning, Ad Policy Optimization, Contextual Bandits, Recommendation Systems, Off-Policy Learning, Online Advertising, Deep Reinforcement Learning, Multi-Objective Optimization}
@@ -82,7 +82,7 @@ Failing to achieve an adequate balance can result in issues such as ad fatigue, 
 Jointly optimizing revenue and long-term engagement is structurally difficult for several fundamental reasons. First, the monetization and engagement objectives can conflict: actions that increase immediate monetization, such as higher ad load, may degrade future engagement and retention, ultimately reducing long-term revenue \cite{sagtani2023quantifying, yan2020ads}. Second, immediate per-interaction signals are directly observable and easier to optimize, whereas long-term outcomes unfold over extended horizons and are harder to measure and attribute to specific actions \cite{hohnhold2015focusing, wang2022surrogate, mcdonald2023spotify}. Third, recommendation decisions alter user state dynamics, creating feedback loops between engagement and future monetization capacity \cite{zou2019reinforcement, ie2019reinforcement}. These properties make the trade-off inherently sequential and policy-dependent.
 
 %Existing solution to this problem
-Despite these structural challenges, large-scale platforms have addressed these challenges using supervised deep learning models optimized for short-term engagement signals such as clicks, dwell time, and conversions \cite{covington2016deep, cheng2016wide, yi2014beyond, mcmahan2013ad}. By learning rich representations of users, items, and context from massive interaction logs, these models estimate conditional expectations of immediate outcomes and use these predictions to guide content selection, ranking, and monetization decisions \cite{covington2016deep, cheng2016wide}. This paradigm has delivered substantial gains in personalization accuracy and short-term monetization efficiency, and remains central to modern industrial recommender systems \cite{covington2016deep, cheng2016wide}.
+Despite these structural challenges, large-scale platforms have addressed these challenges using supervised deep learning models optimized for short-term engagement signals such as clicks, dwell time, and conversions \cite{covington2016deep, cheng2016wide, yi2014beyond, mcmahan2013ad}. By learning rich representations of users, items, and context from massive interaction logs, these models estimate conditional expectations of immediate outcomes and use these predictions to guide content selection, ranking, and monetization decisions \cite{covington2016deep, cheng2016wide}. This paradigm has delivered substantial gains in personalization accuracy and short-term engagement performance \cite{covington2016deep, cheng2016wide, mcmahan2013ad}. It remains central to modern industrial recommender systems.
 
 % Structural limitations of Deep Learning to solve this problem 
 While neural networks remain powerful function approximators, optimizing supervised objectives on historical logged data does not directly address the sequential and interactive nature of the system. In such settings, SL is structurally insufficient for two key reasons. First, SL ignores policy-induced distribution shifts. It optimizes conditional expectations of immediate outcomes (e.g., $\mathbb{E}[r_t \mid s_t, a_t]$) using data generated under a historical policy. This implicitly assumes that the training distribution is fixed. In interactive systems, however, the recommendation policy shapes user behavior, and user behavior in turn determines future training data. This violates the stationarity assumptions underlying standard supervised optimization \cite{swaminathan2015counterfactual,dudik2011doubly}. Second, SL lacks a principled mechanism for evaluating counterfactual trajectories.  SL relies exclusively on realized trajectories. Because user journeys are highly personalized and path-dependent, most possible interaction sequences are never observed in logged data. Long-term outcomes are therefore not fixed labels, but functions of the policy that generates future trajectories \cite{agarwal2016statistical}.
