--- a/paper.tex
+++ b/paper.tex
@@ -82,13 +82,13 @@ Failing to achieve an adequate balance can result in issues such as ad fatigue, 
 Jointly optimizing revenue and long-term engagement is structurally difficult for several fundamental reasons. First, the monetization and engagement objectives can conflict: actions that increase immediate monetization, such as higher ad load, may degrade future engagement and retention, ultimately reducing long-term revenue \cite{sagtani2023quantifying, yan2020ads}. Second, immediate per-interaction signals are directly observable and easier to optimize, whereas long-term outcomes unfold over extended horizons and are harder to measure and attribute to specific actions \cite{hohnhold2015focusing, wang2022surrogate, mcdonald2023spotify}. Third, recommendation decisions alter user state dynamics, creating feedback loops between engagement and future monetization capacity \cite{zou2019reinforcement, ie2019reinforcement}. These properties make the trade-off inherently sequential and policy-dependent.
 
 %Existing solution to this problem
-Despite these structural challenges, large-scale platforms have addressed these challenges using supervised deep learning models optimized for short-term engagement signals such as clicks, dwell time, and conversions \cite{covington2016deep, cheng2016wide, yi2014beyond, mcmahan2013ad}. By learning rich representations of users, items, and context from massive interaction logs, these models estimate conditional expectations of immediate outcomes and use these predictions to guide content selection, ranking, and monetization decisions \cite{covington2016deep, cheng2016wide}. This paradigm has delivered substantial gains in personalization accuracy and short-term engagement performance \cite{covington2016deep, cheng2016wide, mcmahan2013ad}. It remains central to modern industrial recommender systems.
+To address these challenges, large-scale platforms have relied on supervised deep learning models optimized for short-term engagement signals such as clicks, dwell time, and conversions \cite{covington2016deep, cheng2016wide, yi2014beyond, mcmahan2013ad}. By learning rich representations of users, items, and context from large-scale interaction logs, these models estimate conditional expectations of immediate outcomes and use these predictions to guide content selection and ranking \cite{covington2016deep, cheng2016wide}. This paradigm has delivered substantial improvements in short-term engagement and click-through prediction performance \cite{covington2016deep, cheng2016wide, mcmahan2013ad}. It remains central to modern industrial recommender systems.
 
 % Structural limitations of Deep Learning to solve this problem 
-While neural networks remain powerful function approximators, optimizing supervised objectives on historical logged data does not directly address the sequential and interactive nature of the system. In such settings, SL is structurally insufficient for two key reasons. First, SL ignores policy-induced distribution shifts. It optimizes conditional expectations of immediate outcomes (e.g., $\mathbb{E}[r_t \mid s_t, a_t]$) using data generated under a historical policy. This implicitly assumes that the training distribution is fixed. In interactive systems, however, the recommendation policy shapes user behavior, and user behavior in turn determines future training data. This violates the stationarity assumptions underlying standard supervised optimization \cite{swaminathan2015counterfactual,dudik2011doubly}. Second, SL lacks a principled mechanism for evaluating counterfactual trajectories.  SL relies exclusively on realized trajectories. Because user journeys are highly personalized and path-dependent, most possible interaction sequences are never observed in logged data. Long-term outcomes are therefore not fixed labels, but functions of the policy that generates future trajectories \cite{agarwal2016statistical}.
+While neural networks remain powerful function approximators, optimizing supervised objectives on historical logged data does not directly address the sequential and interactive nature of the system. In such settings, SL is structurally insufficient for two key reasons. First, SL ignores policy-induced distribution shifts. It optimizes conditional expectations of immediate outcomes (e.g., $\mathbb{E}[r_t \mid s_t, a_t]$) using data generated under a historical policy. This implicitly assumes that the training distribution is fixed. In interactive systems, however, the recommendation policy shapes user behavior, and user behavior in turn determines future training data. This violates the stationarity assumptions underlying standard supervised optimization \cite{swaminathan2015counterfactual,dudik2011doubly}. Second, SL lacks a principled mechanism for evaluating counterfactual trajectories as it relies exclusively on realized trajectories. Because user journeys are highly personalized and path-dependent, most possible interaction sequences are never observed in logged data. Long-term outcomes are therefore not fixed labels, but functions of the policy that generates future trajectories \cite{agarwal2016statistical}.
 
 	% How does Reinforcement Learning (RL) offer a promising solution to these challenges?
-RL provides a framework in recommendation systems to solve the two problems above \cite{afsar2022reinforcement}. First, RL addresses policy-induced distribution shifts by explicitly modeling recommendation as a sequential decision process in which actions influence future states \cite{Sutton1998,puterman2014markov} . Second, RL enables evaluation and improvement of policies over entire trajectories \cite{Sutton1998,puterman2014markov}. By estimating long-horizon returns under the dynamics induced by a candidate policy, RL allows the system to reason about delayed effects and optimize objectives that depend on sequential interactions \cite{Sutton1998,zou2019reinforcement}.
+RL provides a framework in recommendation systems to solve the two problems above \cite{afsar2022reinforcement}. First, RL addresses policy-induced distribution shifts by explicitly modeling recommendation as a Markov Decision Process (MDP) in which actions influence future states \cite{Sutton1998,puterman2014markov} . Second, RL enables policy evaluation and improvement over complete trajectories through optimization of the expected cumulative return under policy-induced dynamics \cite{Sutton1998}. By estimating long-horizon returns under the dynamics induced by a candidate policy, RL allows the system to reason about delayed effects and optimize objectives that depend on sequential interactions \cite{Sutton1998,zou2019reinforcement}.
 Rather than replacing SL, RL can be viewed as embedding supervised prediction within a sequential control framework \cite{Sutton1998,afsar2022reinforcement}. Deep models remain central for representation learning and reward estimation, while RL augments them with the machinery required to optimize policy-dependent, long-term objectives \cite{dulac2019challenges,levine2020offline,chen2022off}.
 
 
