Recompile paper: updated PDF 2026-02-28 1719

--- a/paper.tex
+++ b/paper.tex
@@ -88,21 +88,19 @@ To address these challenges, large-scale platforms have relied on supervised dee
 While neural networks remain powerful function approximators, optimizing supervised objectives on historical logged data does not directly address the sequential and interactive nature of the system. In such settings, SL is structurally insufficient for two key reasons. First, SL ignores policy-induced distribution shifts. It optimizes conditional expectations of immediate outcomes (e.g., $\mathbb{E}[r_t \mid s_t, a_t]$) using data generated under a historical policy. This implicitly assumes that the training distribution is fixed. In interactive systems, however, the recommendation policy shapes user behavior, and user behavior in turn determines future training data. This violates the stationarity assumptions underlying standard supervised optimization \cite{swaminathan2015counterfactual,dudik2011doubly}. Second, SL lacks a principled mechanism for evaluating counterfactual trajectories as it relies exclusively on realized trajectories. Because user journeys are highly personalized and path-dependent, most possible interaction sequences are never observed in logged data. Long-term outcomes are therefore not fixed labels, but functions of the policy that generates future trajectories \cite{agarwal2016statistical}.
 
 	% How does Reinforcement Learning (RL) offer a promising solution to these challenges?
-RL provides a framework in recommendation systems to solve the two problems above \cite{afsar2022reinforcement}. First, RL addresses policy-induced distribution shifts by explicitly modeling recommendation as a Markov Decision Process (MDP) in which actions influence future states \cite{Sutton1998,puterman2014markov} . Second, RL enables policy evaluation and improvement over complete trajectories through optimization of the expected cumulative return under policy-induced dynamics \cite{Sutton1998}. By estimating long-horizon returns under the dynamics induced by a candidate policy, RL allows the system to reason about delayed effects and optimize objectives that depend on sequential interactions \cite{Sutton1998,zou2019reinforcement}.
-Rather than replacing SL, RL can be viewed as embedding supervised prediction within a sequential control framework \cite{Sutton1998,afsar2022reinforcement}. Deep models remain central for representation learning and reward estimation, while RL augments them with the machinery required to optimize policy-dependent, long-term objectives \cite{dulac2019challenges,levine2020offline,chen2022off}.
-
+RL provides a framework in recommendation systems to solve the two problems above \cite{afsar2022reinforcement}. First, RL addresses policy-induced distribution shifts by explicitly modeling recommendation as a Markov Decision Process (MDP) in which actions influence future states \cite{Sutton1998,puterman2014markov} . Second, RL enables policy evaluation and improvement over complete trajectories through optimization of the expected cumulative return under policy-induced dynamics \cite{Sutton1998}. Rather than replacing SL, RL can be viewed as embedding supervised prediction within a sequential control framework \cite{Sutton1998,afsar2022reinforcement}. Deep models remain central for representation learning and reward estimation, while RL augments them with the machinery required to optimize policy-dependent, long-term objectives \cite{dulac2019challenges,levine2020offline,chen2022off}.
 
 % What specific challenges are encountered when implementing RL in large-scale recommendation systems?
-Despite the promising theoretical framework that RL offers for optimizing long-term value in recommendation systems, implementing RL in real-world, large-scale platforms remains complex \cite{dulac2021challenges}. First, the state space, which reflects the current context of the user and the environment, and the action space, which captures how the recommender system can be tuned, are both essentially infinite \cite{zhu2021overview}. This vastness makes learning and optimization computationally intensive and requires scalable approximation methods, as exact dynamic programming over such state and action spaces is infeasible in practice \cite{afsar2022reinforcement}. Second, designing appropriate reward functions is critical, as poorly chosen reward functions can lead to unintended system behaviors that degrade user experience or negatively affect business revenue \cite{everitt2021reward}. For example, a reward function that overly prioritizes click-based metrics may drive the system to promote clickbait content, boosting short-term engagement but eroding user trust and satisfaction over time \cite{wu2017returning}. Conversely, a reward function too heavily skewed toward revenue metrics could result in excessive ad load, degrading the user experience and accelerating churn. Striking the right balance in reward function design is essential to achieve both user engagement and monetization objectives without compromising the platform’s long-term goals. Furthermore, interpretability is a major challenge in RL deployment. Understanding the learned policies can be particularly difficult when policies are updated in real-time during user interactions (online policy learning) \cite{glanois2024survey} \cite{vouros2022explainable} \cite{dulac2019challenges}. In extreme cases, this lack of transparency could result in non-compliant or unethical behavior, posing significant risks to both users and the business \cite{lambert2023entangled}.
+Despite the promising theoretical framework that RL offers for optimizing long-term value in recommendation systems, implementing RL in real-world, large-scale platforms remains complex \cite{dulac2021challenges}. First, the state space, which reflects the current context of the user and the environment, and the action space, which captures how the recommender system can be tuned, are both essentially infinite \cite{zhu2021overview}. This vastness makes learning and optimization computationally intensive and requires scalable approximation methods, as exact dynamic programming over such state and action spaces is infeasible in practice \cite{afsar2022reinforcement}. Second, designing appropriate reward functions is critical, as poorly chosen reward functions can lead to unintended system behaviors that degrade user experience or negatively affect business revenue \cite{everitt2021reward}. For example, a reward function that overly prioritizes click-based metrics may drive the system to promote clickbait content, boosting short-term engagement but eroding user trust and satisfaction over time \cite{wu2017returning}. Conversely, a reward function too heavily skewed toward revenue metrics could result in excessive ad load, degrading the user experience and accelerating churn. Striking the right balance in reward function design is essential to achieve both user engagement and monetization objectives without compromising the platform’s long-term goals. Furthermore, interpretability is a major challenge in RL deployment. Understanding the learned policies can be particularly difficult when policies are updated in real-time during user interactions (online policy learning) \cite{glanois2024survey, vouros2022explainable,dulac2019challenges}. In extreme cases, this lack of transparency could result in non-compliant or unethical behavior, posing significant risks to both users and the business \cite{lambert2023entangled}.
 
 % Gap in literature 
 In light of the challenges outlined above, this paper provides a synthesis of RL approaches to monetization-aware recommendation systems through the lens of the core components of a Markov Decision Process. Although previous surveys address RL in recommendation systems \cite{lin2023survey, afsar2022reinforcement}, our systematic literature search (see Section~\ref{sec:methodology}) did not identify any survey that explicitly focuses on the \textbf{joint optimization of ads and organic content in sequential and interactive environments}, which leaves limited guidance for systems that must jointly reason about monetization and long-term user value. This paper addresses this limitation by reviewing approaches that move beyond supervised objectives defined under fixed logging policies to analyze how RL agents model and optimize sequential trade-offs between revenue and engagement.
 
 % contributions of the paper 
-This survey introduces a taxonomy for monetization-aware recommender systems grounded in the Markov Decision Process (MDP) framework and uses it to systematically organize and analyze more than 150 academic and industrial works.
+This survey introduces component-level taxonomy that clarifies how existing systems operationalize state, action, reward, and policy, and uses it to systematically organize and analyze more than 150 academic and industrial works.
 
 % How the paper is structured 
-The paper begins with a historical overview of recommendation systems with monetization components, tracing the evolution from rule-based and heuristic approaches to tree-based models and modern deep learning architectures. This progression highlights the limitations of short-horizon optimization and motivates reinforcement learning as a framework for modeling long-horizon, policy-dependent objectives.The survey then introduces the core components of a Markov Decision Process—state, action, reward, and policy as the organizing framework for the remainder of the paper. Rather than structuring prior work chronologically or by algorithmic family, we compare systems according to how they define and operationalize these components. A minimal RL environment (FrozenLake) is used as a conceptual scaffold to introduce the abstraction before mapping it to large-scale monetization-aware recommender systems.
+The paper begins with a historical overview of recommendation systems with monetization components, tracing the evolution from rule-based and heuristic approaches to tree-based models and modern deep learning architectures. This progression highlights the limitations of short-horizon optimization and motivates reinforcement learning as a framework for modeling long-horizon, policy-dependent objectives. The remainder of the paper is structured around these components (state, action, reward, and policy) using them as analytical categories to compare and contrast existing systems.  Rather than structuring prior work chronologically or by algorithmic family, we compare systems according to how they define and operationalize these components. A minimal RL environment (FrozenLake) is used as a conceptual scaffold to introduce the abstraction before mapping it to large-scale monetization-aware recommender systems.
 
 \section{Paper Collection Methodology}
 \label{sec:methodology}
@@ -161,7 +159,7 @@ While recent and highly cited work was prioritized, papers introducing novel met
     \label{tab:comparison}
 \end{table*}
 
-\section{A Brief History of Ad Selection and Ranking in Recommendation Systems}
+\section{A Brief History of Advertising and Recommendation Systems: From Rule-Based to Deep Learning-Based Joint Optimization}
 
 \begin{figure}[ht]
     \centering
@@ -174,8 +172,7 @@ While recent and highly cited work was prioritized, papers introducing novel met
     \end{flushleft}
 \end{figure}
 
-
-In online advertising, a good ad policy can result in positive revenue for the company while also boosting user experience. Conversely, a poor ad policy involves showing ads that are irrelevant to the user’s current intent, overloading the feed with excessive ad density, and failing to align content with the user’s interests. Irrelevant ad targeting can lead to ad fatigue, a state where users become desensitized or frustrated by excessive or poorly targeted ads, resulting in decreased engagement with both the ads and the platform as a whole \cite{ccelik2023ad}. \\
+% In online advertising, a good ad policy can result in positive revenue for the company while also boosting user experience. Conversely, a poor ad policy involves showing ads that are irrelevant to the user’s current intent, overloading the feed with excessive ad density, and failing to align content with the user’s interests. Irrelevant ad targeting can lead to ad fatigue, a state where users become desensitized or frustrated by excessive or poorly targeted ads, resulting in decreased engagement with both the ads and the platform as a whole \cite{ccelik2023ad}. \\
 
 This section traces the evolution of advertising recommendation algorithms, culminating in the adoption of RL to overcome the limitations of earlier approaches. It begins by outlining how early online advertising primarily mirrored offline methods through banner ads and other static formats. It continues by explaining how static online advertising evolved over time to incorporate rule-based models and more sophisticated heuristic techniques. The discussion then transitions to the integration of machine learning methods, including regression-based models, tree-based algorithms, and collaborative filtering, followed by the emergence of deep learning and embedding-based approaches that effectively capture the nonlinear interactions between users and content. Finally, RL is introduced as a promising solution to address the shortcomings of preceding methodologies. This evolution is visually represented in Figure \ref{fig:ad_timeline}, which shows the initial adoption and popularization of techniques and methodologies in online advertising. \\
 
