Recompile: generate paper_2026-03-01_1251.pdf

--- a/paper.tex
+++ b/paper.tex
@@ -187,15 +187,17 @@ The next set of innovations following heuristics and performance-based targeting
 Despite these successes, traditional tabular models struggled to capture nuanced user intent, particularly when processing more complex data such as images or text. In the early 2010s, deep learning gained momentum with breakthroughs like AlexNet \cite{krizhevsky2012imagenet}, which demonstrated the power of neural networks to handle unstructured high-dimensional data. This ability to capture complex, nonlinear interactions dramatically improved ad recommendations, especially through the use of embeddings, which are dense vector representations that map words or images into high-dimensional spaces. Metrics like cosine similarity further refined personalization by aligning recommendations with user interests \cite{covington2016deep}. Embedding-based models, particularly two-tower architectures, presented a major leap forward in ad recommendation systems by effectively capturing intricate relationships between users and ads. These models utilize two neural networks: one dedicated to encoding user information and the other to encoding ad (item) information. The outputs from these networks are then combined to predict user engagement with ads \cite{vorotilov2023scaling}. This approach not only boosted accuracy but also scaled effectively. Despite the significant improvements that embedding-based models introduced in terms of predictive accuracy and scalability of ad recommendation systems, the practical challenges of balancing multiple objectives, such as maximizing revenue, mitigating ad fatigue, and sustaining long-term user engagement remained unresolved.  
 
 
-\textbf{Multi-Armed Bandits (MABs)} emerged as a powerful method for online advertising around the 2010s to minimize user exposure to suboptimal ad configurations, effectively tackling the explore–exploit tradeoff, which consists of finding the optimal balance between choosing new ad policies with unknown performance and showing older ad policies with known positive performance \cite{schwartz2017customer, burtini2015improving}. MABs are a class of algorithms for dynamic decision-making under uncertainty, originally developed in mid-20th-century probability theory \cite{robbins1952sequential}. While MABs had been widely applied in areas such as clinical trials \cite{villar2015multi, thompson1933likelihood}, they saw widespread deployment in large-scale online advertising systems in the 2010s \cite{schwartz2017customer}.  
+\textbf{Multi-Armed Bandits (MABs)} emerged as a powerful method for online advertising around the 2010s to tackle the explore–exploit tradeoff, which consists of finding the optimal balance between choosing new ad policies with unknown performance and showing older ad policies with known positive performance \cite{schwartz2017customer, burtini2015improving}. MABs are a class of algorithms for dynamic decision-making under uncertainty, originally developed in mid-20th-century probability theory \cite{robbins1952sequential}. While MABs had been widely applied in areas such as clinical trials \cite{villar2015multi, thompson1933likelihood}, they were adopted in large-scale web and advertising platforms during the early 2010s \cite{li2010contextual,chapelle2011empirical, schwartz2017customer}.  
 
-MABs allow platforms to reduce unnecessary exposure to a suboptimal treatment by continuously updating the posterior beliefs of which treatment is most likely to yield the highest reward \cite{kuleshov2014algorithms}. 
+MABs allow platforms to reduce unnecessary exposure to a suboptimal treatment by continuously updating the estimates of expected reward and uncertainty of which treatment is most likely to yield the highest reward \cite{kuleshov2014algorithms}. 
 
-In the context of online advertising, “treatments” are typically specific ad configurations, defined by parameters such as displacement cost, reserve price, ad load, and ad placement. “Rewards” typically represent user engagement metrics such as clicks or conversions \cite{schwartz2017customer}.Platforms must continually test new treatments while prioritizing those with strong observed performance to sustain near-term revenue \cite{schwartz2017customer}.  
+In the context of online advertising, “treatments” are typically specific ad configurations, defined by parameters such as displacement cost, reserve price, ad load, and ad placement. “Rewards” typically represent user engagement metrics such as clicks or conversions \cite{schwartz2017customer}.
 
-In contrast to traditional A/B tests, where there are randomized treatments assigned for a predetermined amount of time, MABs dynamically learn which configuration yields the highest reward for each user at a particular time. This approach reduces the time users are exposed to suboptimal ad configurations, thereby mitigating losses in engagement and long-term revenue \cite{schwartz2017customer}. Although this adaptive learning framework manages the trade-off between minimizing regret from suboptimal treatments and exploring potentially superior configurations, defining the precise reward function to optimize remains an open challenge  \cite{wen2019learning}.
+In contrast to traditional A/B tests, where there are randomized treatments assigned for a predetermined amount of time, MABs dynamically learn which configuration yields the highest reward for each user at a particular time. Although this adaptive learning framework manages the trade-off between minimizing regret from suboptimal treatments and exploring potentially superior configurations, defining the precise reward function to optimize remains an open challenge  \cite{wen2019learning}.
 
-To formalize multi-objective trade-offs such as balancing revenue and user satisfaction, utility functions have been employed in online advertising since the early 2000s \cite{engel2008incorporating}. Rooted in microeconomic theory, utility functions encode multiple objectives, such as revenue, user satisfaction, and long-term platform health, into a single scalar metric, enabling principled comparison and optimization \cite{engel2008incorporating}. When integrated into MAB frameworks, this unified reward signal guides exploration toward policies that balance short-term performance (e.g., clicks or conversions) with long-term considerations such as user trust and fatigue.
+To formalize multi-objective trade-offs such as balancing revenue and user satisfaction, utility functions have been employed in online advertising since the early 2000s \cite{engel2008incorporating}.Drawing on microeconomic utility theory, platforms formalized multi-objective trade-offs through scalar utility functions that encode multiple objectives—such as revenue, user satisfaction, and long-term platform health—into a single metric, enabling principled comparison and optimization \cite{engel2008incorporating}. When integrated into MAB frameworks, this unified reward signal guides exploration toward policies that balance short-term performance (e.g., clicks or conversions) with long-term considerations such as user trust and fatigue. 
+
+Although utility-weighted bandits can encode long-term targets via proxy rewards, they remain structurally one-step: they estimate conditional expectations under a logging policy and do not represent policy-induced feedback loops, thereby limiting counterfactual evaluation of multi-step trajectories under alternative policies.
 
 \subsection{Advances in Deep Learning: Attention Models, Transformers, and Contextual Bandits}
 
